# user-service

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20260207_0001_initial_schema.py  20260207_0002_userspaces_and_token_version.py
app/: main.py
app/api/: deps.py  routes_auth.py  routes_users.py  routes_userspaces.py
app/core/: config.py
app/db/: session.py
app/models/: user.py  userspace.py
app/schemas/: auth.py  user.py  userspace.py
app/services/: auth.py  avatar.py  security.py
deploy/: apply-host-setup.sh  cloudflared-config.yml  user-service.service
docs/: integration-guide-for-agents.md  user-stories.md
scripts/: run-prod-smoke.sh  start-services.sh  status-services.sh  stop-services.sh
tests/: conftest.py  test_user_stories.py
tests_prod/: test_prod_smoke.py
