[project]
name = "user-service"
version = "0.1.0"
description = "Standalone reusable FastAPI user service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.16.0",
  "pydantic-settings>=2.10.0",
  "passlib[bcrypt]>=1.7.4",
  "pillow>=11.3.0",
  "python-jose[cryptography]>=3.5.0",
  "python-multipart>=0.0.20",
]

[tool.uv]
dev-dependencies = []
